# bungieapi

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENCE  Makefile  README.rst  get_token.py  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  tests.yml  update.yml
bungieapi/: __init__.py  base.py  client.py  forge.py  json.py  token.py  types.py
docs/: Makefile  bungieapi.generated.clients.rst  bungieapi.generated.components.responses.common.rst  bungieapi.generated.components.responses.config.rst  bungieapi.generated.components.responses.content.rst  bungieapi.generated.components.responses.destiny.rst  bungieapi.generated.components.responses.rst  bungieapi.generated.components.responses.social.rst  bungieapi.generated.components.rst  bungieapi.generated.components.schemas.common.rst  bungieapi.generated.components.schemas.config.rst  bungieapi.generated.components.schemas.content.rst  bungieapi.generated.components.schemas.destiny.components.rst  bungieapi.generated.components.schemas.destiny.definitions.rst  bungieapi.generated.components.schemas.destiny.entities.rst  bungieapi.generated.components.schemas.destiny.historical_stats.rst  bungieapi.generated.components.schemas.destiny.reporting.rst  bungieapi.generated.components.schemas.destiny.requests.rst  bungieapi.generated.components.schemas.destiny.rst  bungieapi.generated.components.schemas.rst  bungieapi.generated.components.schemas.social.rst  bungieapi.generated.components.schemas.tags.models.rst  bungieapi.generated.components.schemas.tags.rst  bungieapi.generated.components.schemas.user.rst  bungieapi.generated.rst  bungieapi.generated.types.common.rst  bungieapi.generated.types.config.rst  bungieapi.generated.types.content.rst  bungieapi.generated.types.destiny.components.rst  bungieapi.generated.types.destiny.definitions.rst  bungieapi.generated.types.destiny.entities.rst  bungieapi.generated.types.destiny.historical_stats.rst  bungieapi.generated.types.destiny.reporting.rst  bungieapi.generated.types.destiny.requests.rst  bungieapi.generated.types.destiny.rst  bungieapi.generated.types.rst  bungieapi.generated.types.social.rst  bungieapi.generated.types.tags.models.rst  bungieapi.generated.types.tags.rst  bungieapi.generated.types.user.rst  (+6 more)
radegast/: cleanup.py  cli.py  openapi.py  tools.py
tests/: conftest.py  test_bungieapi.py  test_types.py
update/: __main__.py  cleanup.py  cli.py  forge.py  openapi.py  svarog.py  tools.py
(+21 files in other folders)
