[tool.poetry]
name = "bungieapi"
version = "0.1.0"
description = "Python client for bungie api"
authors = ["Damian Świstowski <damian@swistowski.org>"]
include = ["bungieapi/py.typed"]


[tool.poetry.dependencies]
python = "^3.10"
svarog = "^0.2.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.920"
black = "^21.12b0"
isort = "^5.10.1"
docformatter = "^1.4"
click = "^8.0.3"
pytest-asyncio = "^0.16.0"
flake8 = "^4.0.1"
Sphinx = "^4.3.2"
autoflake = "^1.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "pycharm"
src_paths = ["bungieapi", "update", "tests"]

[tool.black]
line-length = 88
target-version = ['py39']