[tool.poetry]
name = "bungieapi"
version = "0.1.0"
description = "Python client for bungie api"
authors = ["Damian Świstowski <damian@swistowski.org>"]
include = ["bungieapi/py.typed", "bungieapi/certs/localhost.pem", "bungieapi/certs/localhost-key.pem"]


[tool.poetry.dependencies]
python = "^3.10"
svarog = "^0.2.2"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^0.940"
black = "^22.1"
isort = "^5.10.1"
docformatter = "^1.4"
click = "^8.0.4"
pytest-asyncio = "^0.18.1"
flake8 = "^4.0.1"
Sphinx = "^4.4.0"
autoflake = "^1.4"
pre-commit = "^2.17.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "pycharm"
src_paths = ["bungieapi", "update", "tests"]

[tool.black]
line-length = 88
target-version = ['py39']